refactored and added new test cases