@@ -1,8 +1,7 @@
 package com.springframework.beer.controller;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.springframework.beer.model.Beer;
+import com.springframework.beer.model.BeerDTO;
 import com.springframework.beer.services.BeerService;
 import com.springframework.beer.services.BeerServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
@@ -11,12 +10,12 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.HashMap;
+import java.util.Optional;
 import java.util.UUID;
 
 
@@ -35,7 +34,7 @@ class BeerControllerTest {
     ArgumentCaptor<UUID> uuidArgumentCaptor;
 
     @Captor
-    ArgumentCaptor<Beer> beerArgumentCaptor;
+    ArgumentCaptor<BeerDTO> beerArgumentCaptor;
 
     @Autowired
     MockMvc mockMvc;
@@ -61,7 +60,7 @@ class BeerControllerTest {
 
         var obj = mapper.writeValueAsString(beer);
 
-        given(beerService.saveNewBeer(any(Beer.class))).willReturn(beerServiceImpl.listBeers().get(1));
+        given(beerService.saveNewBeer(any(BeerDTO.class))).willReturn(beerServiceImpl.listBeers().get(1));
 
         mockMvc.perform(post("/api/v1/beer")
                 .accept(MediaType.APPLICATION_JSON)
@@ -80,7 +79,7 @@ class BeerControllerTest {
     @Test
     void getBeerById() throws Exception {
         var beer = beerServiceImpl.listBeers().get(0);
-        given(beerService.getBeerById(beer.getId())).willReturn(beer);
+        given(beerService.getBeerById(beer.getId())).willReturn(Optional.of(beer));
         mockMvc.perform(get("/api/v1/beer/"+beer.getId().toString())
                 .accept(MediaType.APPLICATION_JSON)
         ).andExpect(jsonPath("$.id", is(beer.getId().toString())))
@@ -90,20 +89,22 @@ class BeerControllerTest {
 
     @Test
     void updateBeerById() throws Exception {
-        var beer = beerServiceImpl.listBeers().get(0);
-
+        var beer = beerServiceImpl.listBeers().getFirst();
+        given(beerService.updateBeerById(any(UUID.class), any(BeerDTO.class))).willReturn(Optional.of(beer));
         mockMvc.perform(put("/api/v1/beer/"+beer.getId())
                 .accept(MediaType.APPLICATION_JSON)
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(mapper.writeValueAsString(beer)))
                 .andExpect(status().isNoContent());
 
-        verify(beerService, times(1)).updateBeerById(any(UUID.class), any(Beer.class));
+        verify(beerService, times(1)).updateBeerById(any(UUID.class), any(BeerDTO.class));
     }
 
     @Test
     void deleteBeerById() throws Exception {
         var beer =beerServiceImpl.listBeers().getFirst();
+
+        given(beerService.deleteBeerById(any(UUID.class))).willReturn(true);
 
         mockMvc.perform(delete("/api/v1/beer/"+beer.getId().toString())
                 .accept(MediaType.APPLICATION_JSON))
@@ -134,5 +135,12 @@ class BeerControllerTest {
 
     }
 
+    @Test
+    void getBeerByIdNotFound() throws Exception {
+        given(beerService.getBeerById(any(UUID.class))).willReturn(Optional.empty());
 
+        mockMvc.perform(get("/api/v1/beer/"+ UUID.randomUUID())).andExpect(
+                status().isNotFound()
+        );
+    }
 }
